v2.9.1/laravel_core/laravel_core_galaxy_llm.md
# ARCHITECTURAL_BRIEF: laravel_core
> INSTRUCTION: Deterministic Syntactic Analysis. Base architectural insights on Structural Magnitude, Extracted Signatures, and Risk overlays.

## 0. FORENSIC TRACEABILITY
| Metadata | Value |
|---|---|
| **Engine** | `GitGalaxy Scope vlatest (Delta Mode)` |
| **Git Remote** | `https://github.com/laravel/framework.git` |
| **Zero-Dependency Mode** | `ACTIVE (Degraded Precision)` |
| **File Archetype Brain** | corpus `master_db_v2.9.0.db` @ `71f3d405a2d8` · trainer `2b0cd20` · engine `unknown` · contract `92c0b8a801d69bb0` · trained `2026-09-19T12:02:33+00:00` |
| **Repo Archetype Brain** | corpus `master_db_v2.9.0.db` @ `71f3d405a2d8` · trainer `2b0cd20` · engine `unknown` · contract `7f4885b42206d553` · trained `2026-09-19T12:02:41+00:00` |

> **⚠️ ZERO-DEPENDENCY MODE ACTIVE:**
> Optional engines missing during this scan: `tiktoken`, `pandas`, `xgboost`. Metrics that need them were NOT computed -- shown as `n/a` or omitted, and no value shown for them is a measurement: Token Mass and Financial Read Cost (`tiktoken`); AI threat classification (`xgboost`/`pandas`/`numpy`). Every graph metric (PageRank / Blast Radius, the centralities, the repo network table, connection counts) is computed natively and matches full precision. Do not infer values for the missing metrics.

## 0.5 AI THREAT AUDIT STATUS
> **✅ SECURE_NO_THREATS_DETECTED**
> XGBoost Structural Signatures model found no malicious artifacts.

## 1. EXECUTIVE SUMMARY
- **Scope:** 3060 analyzed artifact(s), 334464 LOC.
- **Load-bearing artifact:** `src/Illuminate/Database/Eloquent/Model.php` -- 273 in-repo importer(s) depend on it. Changes here propagate furthest.
- **Top orchestrator:** `tests/Validation/ValidationValidatorTest.php` -- pulls in 482 dependencies, the widest assembly point in the scan.
- **Heaviest artifact:** `tests/Foundation/fixtures/.env` at magnitude 5000.0 (structural weight, not risk).
- **How to read this brief:** section 11 ranks artifacts by structural magnitude with a blast-radius line each; section 7 has the full dependency graph. The surface vectors in section 6 describe what is present in a file, not the probability of a defect -- Appendix A has the equations and the validation record behind that distinction.

## 1.5 SYSTEM ROLE & PHILOSOPHY
> You are a Senior Technical Storyteller and Codebase Architect. GitGalaxy has translated the non-visual architecture of this repository into measurable Structural Signatures (regex-derived counts, not an AST or compiler pass). Your job is to weave those signatures into a coherent, factual narrative about how this system is built -- its architecture, design patterns, and complexity -- not to render a verdict.
> 
> **CORE DIRECTIVES:**
> 1. **Narrate the Architecture, Don't Judge the Author:** Frame every observation as a blameless description of the system's physical reality. A high Structural Surface Profile reading (formerly called Risk Exposure; e.g., Complexity Load, formerly Cognitive Load Exposure) describes where the architecture may be drifting into fragile territory, not developer incompetence -- it is a prompt to investigate, never a verdict. These are activity/content surface meters, not defect-probability estimates (gitgalaxy#2991, evidence in #2982) -- describe what is there, don't imply it predicts a bug.
> 2. **The Physical Reality Rule:** Base your narrative strictly on the provided Structural Signatures and the numbers derived from them. Do not hallucinate meaning, and do not restate a heuristic's raw label (e.g. a 'Logic Bomb' or 'O(2^N)' flag) as a confirmed finding of malice or a guaranteed defect -- explain what the signature actually measures, weave it into the story of the file, and let the reader draw their own conclusion.
> 3. **Risk vs. Defense:** Code is a balance. A file with high `flux` (state mutation) is risky unless balanced by `freeze_hits` (immutability). High `danger` is brittle unless wrapped in `safety`. Tell that balance as part of the narrative, not as an isolated alarm.
> 
> **THE STRUCTURAL SIGNATURE LEXICON:**
> * **Structure & Mass:** `branch` (splits), `linear` (paths), `args` (coupling), `func_start` (entry points).
> * **Risk & Volatility:** `danger` (dynamic execution), `flux` (state mutation), `graveyard` (commented-out logic), `safety_neg` (security bypasses).
> * **Architecture & Domain:** `io` (network latency), `concurrency` (async orchestration), `api` (public surface), `import` (dependencies).
> * **Defensive Guardrails:** `safety` (Error handling), `freeze_hits` (immutability), `cleanup` (state destruction).
> *(Section 2, the structural-surface lexicon and its equations, is now **Appendix A** at the end of this brief -- the findings come first.)*

## 3. MACRO STATE
| Metric | Value |
|---|---|
| Total Artifacts | 3275 |
| Analyzed Artifacts (Scanned) | 3060 |
| Excluded Artifacts (Unparsable data, binaries, unsupported formats) | 215 |
| Total LOC | 334464 |
| Volatility Index | 0.001 |
| % Scanned of codebase = | 93.4% |
| Dominant Lang | PHP |

## 3.5 MACRO-NETWORK TOPOLOGY (Resilience & Coupling)
| Metric | Value | Interpretation |
|---|---|---|
| Modularity | 0.5918 | High = Clean micro-boundaries. Low = Spaghetti coupling. |
| Assortativity | -0.1449 | Positive = Resilient core. Negative = Fragile single-points-of-failure. |
| Cyclic Density | 4.0% | % of files trapped in dependency loops (Static Friction). |
| Avg Path Length | 5.3716 | Mean import hops from a file to each file it transitively depends on. Higher = Longer dependency chains. |
| Articulation Pts | 242 | Number of single files that, if removed, shatter the network. |

## 4. COMPOSITION
| Lang | Files | LOC | Share |
|---|---|---|---|
| PHP | 2925 | 329020 | 95.6% |
| JSON | 45 | 4501 | 1.5% |
| MARKDOWN | 41 | 0 | 1.3% |
| YAML | 35 | 401 | 1.1% |
| SHELL | 4 | 174 | 0.1% |
| JAVASCRIPT | 3 | 102 | 0.1% |
| PLAINTEXT | 2 | 1 | 0.1% |
| CSS | 2 | 265 | 0.1% |
| XML | 2 | 0 | 0.1% |
| SQLITE | 1 | 0 | 0.0% |

## 4.5 REPOSITORY ECOSYSTEM BASELINE (GLOBAL ARCHITECTURE)
> **Assigned Ecosystem Baseline:** `Hub-Coupled Monorepo`
> **Architectural Drift Z-Score:** `3.213`
> **Composition Archetype:** `Hub-Coupled Monorepo` (z +3.21; from the repo's file-archetype mix)
> **File Composition:** Interface Declarations Files 16%, Data / Markup / Trivial 16%, Parameter Forwarders Files 15%, Encapsulated Accessors Files 12%, Large Core Modules (3) 11%
> **⚠️ UNIQUE INTERPRETATION:** This repository has a high Z-Score. While it maps closest to this archetype, its internal structure is a highly unique or hybrid interpretation of the pattern.

## 4.6 FILE ARCHETYPES & STATIC ASSETS
### Active Execution Logic (ML Clusters)
| Archetype | Count | Repo % |
|---|---|---|
| Unclassified | 3017 | 98.6% |
| Unknown | 1 | 0.0% |

### Inert Structural Mass (Static Categories)
| Category | Count | Repo % |
|---|---|---|
| Static: Literature & Documentation | 42 | 1.4% |

## 5. EXCLUDED ARTIFACTS (Unparsable or Shielded Files)
*Total Excluded Artifacts: 215*

**Composition by Extension & Reason:**
- `.stub`: 87x Unsupported Format (.stub)
- `no_extension`: 35x Unsupported Format (.undeterminable), 7x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Binary Format Detected)
- `.php`: 33x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 2x Excluded (Saturation: Line 9 exceeds 500 chars), 1x Excluded (Saturation: Line 10 exceeds 500 chars)
- `.yml`: 18x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.png`: 7x Excluded (Explicitly Denied Extension: '.png')
- `.md`: 6x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.dist`: 2x Unsupported Format (.dist), 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.json`: 3x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.js`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.css`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.txt`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.sqlite`: 1x Excluded (Unsupported Extension: '.sqlite')
- `.gz`: 1x Excluded (Explicitly Denied Extension: '.gz')
- `.pdf`: 1x Excluded (Explicitly Denied Extension: '.pdf')
- `.jpg`: 1x Excluded (Explicitly Denied Extension: '.jpg')

## 6. STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (0-100%)
| Structural Surface Vector | Min | Max | Mean | Med | Mode |
|---|---|---|---|---|---|
| Complexity Load (formerly Cognitive Load Exposure) | 0.0 | 77.4 | 9.6 | 3.5 | 0.0 |
| Guard Balance (formerly Error & Exception Exposure) | 0.0 | 100.0 | 48.2 | 59.3 | 0.0 |
| Debt Markers (formerly Tech Debt Exposure) | 0.0 | 100.0 | 5.8 | 0.0 | 0.0 |
| Test Surface (formerly Testing Exposure) | 0.0 | 80.0 | 4.6 | 0.0 | 0.0 |
| Connectivity (formerly API Exposure) | 0.0 | 100.0 | 17.0 | 8.3 | 0.0 |
| Concurrency Surface (formerly Concurrency Exposure) | 0.0 | 100.0 | 1.0 | 0.0 | 0.0 |
| Mutation Surface (formerly State Flux Exposure) | 0.0 | 100.0 | 38.2 | 12.6 | 0.0 |
| Dead Code Surface (formerly Commented Logic Exposure) | 0.0 | 50.0 | 0.2 | 0.0 | 0.0 |
| Historical Stability (predictive layer, promotion pending #2987) (formerly Instability Exposure) | 0.0 | 5.7 | 0.9 | 0.0 | 0.0 |
| Historical Churn (predictive layer, promotion pending #2987) (formerly Volatility Exposure) | 0.0 | 100.0 | 7.0 | 0.0 | 0.0 |
| Doc Surface (formerly Documentation Exposure) _(coverage)_ | 0.0 | 100.0 | 35.5 | 0.0 | 0.0 |
| Credential Material (formerly Hardcoded Payload Artifacts) | 0.0 | 100.0 | 0.1 | 0.0 | 0.0 |

> `Doc Surface (formerly Documentation Exposure)` is **documentation coverage, not a fragility driver**. It is reported for context beside program length, and is deliberately excluded from the ranked-file drivers in this brief: it measures the share of a file's unit weight a reader cannot recover from documentation, so on a codebase that documents little it sits near ceiling everywhere and describes the repo rather than distinguishing files within it.
> `Spec Alignment (formerly Specification Exposure)` was **not measured** on this scan and is therefore absent above rather than reported as 0 (which would assert full alignment). Enable it with `--spec-alignment` if this codebase uses the corresponding convention.

## 6b. SURFACE FAMILY PROFILE (Tier 1/2/3 -- gitgalaxy#2994)
> Percentile columns elsewhere in this brief that come from the Tier-2 snapshot percentiles are SNAPSHOT-RELATIVE: "87" means this file's value sits at the 87th percentile of THIS repo's files for that surface -- true by construction (Hazen average-rank), not a calibrated 0-100 risk threshold like the section 6 sigmoid scores above. An all-zero surface across the whole repo reads as 0.0 for every file, never a false-median 50.
| Family | Repo Total | Files w/ Signal | P90 File Value | Top File |
|---|---|---|---|---|
| memory | 16937 | 1459 | 12 | `tests/Validation/ValidationValidatorTest.php` |
| cleanup | 348 | 149 | 0 | `tests/Events/EventsDispatcherTest.php` |
| guards | 16434 | 1757 | 14 | `tests/Testing/Fluent/AssertTest.php` |
| danger | 5059 | 755 | 3 | `tests/Database/DatabaseEloquentIntegrationTest.php` |
| concurrency | 1229 | 176 | 0 | `tests/Integration/Cache/PhpRedisCacheLockTest.php` |
| connectivity | 28194 | 2501 | 20 | `tests/Database/DatabaseQueryBuilderTest.php` |
| io | 673 | 150 | 0 | `tests/Filesystem/FilesystemTest.php` |
| crypto | 0 | 0 | 0 | - |
| ipc | 114 | 27 | 0 | `src/Illuminate/Collections/LazyCollection.php` |
| time | 260 | 65 | 0 | `tests/Validation/ValidationValidatorTest.php` |
| serialization | 957 | 233 | 0 | `tests/Integration/Queue/ModelSerializationTest.php` |
| regex | 254 | 108 | 0 | `src/Illuminate/Support/Str.php` |
| events | 1784 | 243 | 0 | `tests/Events/EventsDispatcherTest.php` |
| tests | 31330 | 1016 | 21 | `tests/Validation/ValidationValidatorTest.php` |
| docs | 17642 | 1734 | 14 | `src/Illuminate/Support/Facades/Redis.php` |
| debt | 1743 | 296 | 0 | `src/Illuminate/Foundation/Console/StubPublishCommand.php` |
| mutation | 48723 | 2240 | 34 | `tests/Validation/ValidationValidatorTest.php` |
| dead_code | 14204 | 1253 | 10 | `tests/Database/DatabaseQueryBuilderTest.php` |
| credential | 108 | 13 | 0 | `src/Illuminate/Foundation/resources/exceptions/renderer/package-lock.json` |
| threat | 787 | 313 | 1 | `src/Illuminate/View/Component.php` |
| ml_ai | 246 | 62 | 0 | `tests/Support/SupportConditionableTest.php` |
| ui | 1001 | 257 | 0 | `tests/Integration/View/BladeTest.php` |

**Relations (repo medians):**
- `guard_balance_ratio` (guards / (danger + 1)): **1.0**
- `alloc_cleanup_pairing` (cleanup / (memory + 1)): **0.0**

## 7. ARCHITECTURAL CHOKE POINTS & DEPENDENCIES
### Top I/O Latency Risks
- `tests/Filesystem/FilesystemTest.php` (Hits: 61)
- `tests/Http/Middleware/TrustProxiesTest.php` (Hits: 51)
- `tests/Http/HttpClientTest.php` (Hits: 49)

### Top 5 Structural Pillars (Highest 'Imported By' / Blast Radius)
These are the most interconnected files relative to the rest of this repository. On a repo with dense internal coupling, that means core load-bearing infrastructure -- changes carry real cascading-break risk. On a repo with a flatter internal architecture, the gap between #1 and #5 may be small, and this list is a weaker signal accordingly; compare the connection counts below before treating it as a verdict.

1. **Model.php** (`src/Illuminate/Database/Eloquent/Model.php`) — 273 inbound connections
2. **Str.php** (`src/Illuminate/Support/Str.php`) — 235 inbound connections
3. **Container.php** (`src/Illuminate/Container/Container.php`) — 170 inbound connections
4. **Carbon.php** (`src/Illuminate/Support/Carbon.php`) — 165 inbound connections
5. **InvalidArgumentException.php** (`src/Illuminate/Testing/Exceptions/InvalidArgumentException.php`) — 165 inbound connections

### Top 5 Orchestrators (Highest 'Imports' / Fragility Index)
These files pull in the most external dependencies. They are highly coupled and fragile to API changes.

1. **ValidationValidatorTest.php** (`tests/Validation/ValidationValidatorTest.php`) — 482 outbound dependencies
2. **TypeTest.php** (`tests/JsonSchema/TypeTest.php`) — 157 outbound dependencies
3. **validation.php** (`src/Illuminate/Translation/lang/en/validation.php`) — 118 outbound dependencies
4. **ArtisanServiceProvider.php** (`src/Illuminate/Foundation/Providers/ArtisanServiceProvider.php`) — 114 outbound dependencies
5. **ValidatesAttributes.php** (`src/Illuminate/Validation/Concerns/ValidatesAttributes.php`) — 104 outbound dependencies

## 8. CORE FUNCTION HITLIST (Heaviest Functions)
> *Note: The 'Impact' metric below represents Structural Magnitude (complexity, arguments, and length), NOT operational risk. These are the load-bearing pillars of the logic.*

- `getPluralIndex` **(Compute Cores)** (@ `src/Illuminate/Translation/MessageSelector.php`) -> Impact: **597.1** | LOC: 302
  * *Intent:* /** * Get the index to use for pluralization. * * The plural rules are derived from code of the Zend Framework (2010-09-25), which * is subject to the...
- `testWhereWithArrayConditions` **(I/O & Config Routines)** (@ `tests/Database/DatabaseQueryBuilderTest.php`) -> Impact: **103.9** | LOC: 278
- `buildRoutingCallback` **(Many-Argument Workhorses)** (@ `src/Illuminate/Foundation/Configuration/ApplicationBuilder.php`) -> Impact: **72.6** | LOC: 77
  * *Intent:* /** * Create the routing callback for the application. * * @param array|string|null $web * @param array|string|null $api * @param string|null $pages *...
- `formatParameters` **(Many-Argument Workhorses)** (@ `src/Illuminate/Routing/RouteUrlGenerator.php`) -> Impact: **67.0** | LOC: 127
  * *Intent:* /** * Format the array of route parameters. * * @param \Illuminate\Routing\Route $route * @param mixed $parameters * @return array */
- `withRouting` **(Many-Argument Workhorses)** (@ `src/Illuminate/Foundation/Configuration/ApplicationBuilder.php`) -> Impact: **64.9** | LOC: 34
  * *Intent:* /** * Register the routing services for the application. * * @param \Closure|null $using * @param array|string|null $web * @param array|string|null $a...
- `compileSlots` **(Defensive Guards)** (@ `src/Illuminate/View/Compilers/ComponentTagCompiler.php`) -> Impact: **61.7** | LOC: 74
  * *Intent:* /** * Compile the slot tags within the given string. * * @param string $value * @return string */
- `update` **(Compute Cores)** (@ `src/Illuminate/Database/Schema/BlueprintState.php`) -> Impact: **61.2** | LOC: 93
  * *Intent:* /** * Update the blueprint's state. * * @param \Illuminate\Support\Fluent $command * @return void */
- `queueNotification` **(Defensive Guards)** (@ `src/Illuminate/Notifications/NotificationSender.php`) -> Impact: **57.5** | LOC: 77
  * *Intent:* /** * Queue the given notification instances. * * @param mixed $notifiables * @param \Illuminate\Notifications\Notification $notification * @return vo...
- `castAttribute` **(Many-Argument Workhorses)** (@ `src/Illuminate/Database/Eloquent/Concerns/HasAttributes.php`) -> Impact: **51.7** | LOC: 64
  * *Intent:* /** * Cast an attribute to a native PHP type. * * @param string $key * @param mixed $value * @return mixed */
- `__construct` **(Many-Argument Workhorses)** (@ `src/Illuminate/Database/Eloquent/Factories/Factory.php`) -> Impact: **50.9** | LOC: 24
  * *Intent:* /** * Create a new factory instance. * * @param int|null $count * @param \Illuminate\Support\Collection|null $states * @param \Illuminate\Support\Coll...

*Function archetypes referenced above:*
  * **Compute Cores**: dense algorithmic logic (high decision density per line)
  * **Defensive Guards**: validation and error handling (null checks, guards, early bailouts)
  * **I/O & Config Routines**: dominated by I/O and configuration handling
  * **Many-Argument Workhorses**: large, many-parameter procedural function doing heavy lifting

## 9. DIRECTORY GROUPS (Top 10 Heaviest Modules)
| Folder Path | Files | Total Impact | Avg Complexity Load | Avg Debt Markers |
|---|---|---|---|---|
| `tests/Database` | 128 | 22769.36 | 10.14% | 0.0% |
| `tests/Support` | 53 | 8696.2 | 6.04% | 0.0% |
| `tests/Integration/Database` | 100 | 6538.32 | 4.08% | 0.0% |
| `tests/Validation` | 37 | 5912.12 | 4.74% | 0.0% |
| `src/Illuminate/Collections` | 11 | 5354.25 | 19.42% | 44.44% |
| `src/Illuminate/Support` | 41 | 5201.44 | 26.29% | 5.27% |
| `tests/Foundation/fixtures` | 12 | 5000.13 | 0.66% | 0.0% |
| `src/Illuminate/Routing` | 38 | 4326.38 | 23.16% | 19.87% |
| `src/Illuminate/Foundation/Console` | 68 | 3548.02 | 16.19% | 38.27% |
| `src/Illuminate/Database/Eloquent` | 24 | 3430.14 | 15.05% | 9.59% |

## 10. TARGETED STRUCTURAL SURFACE VECTORS (formerly Risk Vectors, Top 5 by Surface)
### Highest Debt Markers (formerly Tech Debt; Fragile/Planned)
- `src/Illuminate/Foundation/Console/StubPublishCommand.php` -> **100.0%** Exposure
- `src/Illuminate/Database/Schema/ForeignKeyDefinition.php` -> **99.9999%** Exposure
- `src/Illuminate/Cache/RedisLock.php` -> **99.9996%** Exposure
- `src/Illuminate/Database/DatabaseTransactionRecord.php` -> **99.9996%** Exposure
- `src/Illuminate/Process/InvokedProcess.php` -> **99.9994%** Exposure
### Highest Mutation Surface (formerly State Flux; Mutation/Volatility)
- `src/Illuminate/Auth/Passwords/PasswordBroker.php` -> **100.0%** Exposure
- `src/Illuminate/Auth/TokenGuard.php` -> **100.0%** Exposure
- `src/Illuminate/Bus/Batchable.php` -> **100.0%** Exposure
- `src/Illuminate/Bus/DebounceLock.php` -> **100.0%** Exposure
- `src/Illuminate/Bus/Dispatcher.php` -> **100.0%** Exposure
### Highest Design Slop (Dead & Duplicated Logic)
- `tests/Database/DatabaseQueryBuilderTest.php` -> **452** Orphaned Functions | **2** Duplicates
- `tests/Support/SupportCollectionTest.php` -> **391** Orphaned Functions | **0** Duplicates
- `tests/Validation/ValidationValidatorTest.php` -> **288** Orphaned Functions | **33** Duplicates
- `tests/Database/DatabaseEloquentModelTest.php` -> **261** Orphaned Functions | **8** Duplicates
- `tests/Http/HttpClientTest.php` -> **255** Orphaned Functions | **0** Duplicates

## 10.5 AI THREAT INTELLIGENCE (XGBoost)
*No files met the threshold for malicious structural signatures.*

## 10.6 WEAPONIZABLE SURFACE EXPOSURES (RULE-BASED SAST)
> Secondary Evidence: The following files tripped specific static threat signatures. Use these to explain *why* the XGBoost model flagged the files above.

### Credential Material (formerly Hardcoded Payload Artifacts)
- `tests/Integration/Database/EloquentModelEncryptedDirtyTest.php` -> **100.0%** Exposure
- `tests/Queue/QueueSqsJobTest.php` -> **74.9953%** Exposure

## 10.7 ECOSYSTEM SECURITY AUDITS
> **AI CONTEXT:** High-level perimeter defense metrics from the X-Ray, Supply Chain Firewall, and API Network Mapper.

### ☢️ X-Ray & 🧱 Supply Chain Firewall
- **Binary Anomalies (X-Ray):** `3` (High entropy, packed payloads, or magic byte mismatches).
- **Blacklisted Dependencies:** `0` explicitly banned packages imported.
- **Unknown Dependencies:** `16021` packages imported that bypass the Zero-Trust whitelist.

## 11. RANKED ARTIFACTS (Top 25 by Structural Magnitude)
> Ranked by Structural Magnitude: the file's structural weight and centralization within the system. Magnitude is **not** a risk score and is independent of the surface vectors in section 6. Each entry carries a **Blast Radius** line stating what a change to it would reach -- that, not the vector percentages, is the actionable part.

### `tests/Foundation/fixtures/.env` (PLAINTEXT | Tier 0 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: N/A IQR)
- **Magnitude:** 5000.0 | **LOC:** 1 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Blast Radius:** isolated in the scanned graph -- no in-repo artifact imports it and it imports none
- **Top Surface Vectors:** None above 0%
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* None
* *Risk/State:* None
* *Architecture:* None
* *Defense:* None
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tests/Database/DatabaseQueryBuilderTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_10` (Drift: 0.0 IQR)
- **Magnitude:** 4888.12 | **LOC:** 7703 | **CtrlFlow:** 17.7% | **Authorship Centralization:** 12.0%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **36**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Guard Balance (formerly Safety Score) (88.1%), Mutation Surface (formerly State Flux) (85.0%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (72.7%), Complexity Load (formerly Cognitive Load) (32.8%)
- **Documentation Coverage:** 100.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `testWhereWithArrayConditions` **(I/O & Config Routines)** (Impact: 103.9)
  * `testWhereBetweens` **(I/O & Config Routines)** (Impact: 25.3)
  * `testUpsertMethod` **(Compute Cores)** (Impact: 24.6)
  * `testUpsertMethodWithUpdateColumns` **(Compute Cores)** (Impact: 24.6)
  * `testCursorPaginateWithUnionMultipleWheresMultipleOrders` **(Compute Cores)** (Impact: 22.4)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 475 instances
* *State Mutation (weighted view):* 2347
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 1129`, `structural_boundaries: 1318`, `args: 692`, `func_start: 464`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 19`, `high_risk_execution: 140`, `state_mutation: 1397`, `duplicate_logic: 2`, `unreferenced_by_name: 452`
* *Architecture:* `api: 454`, `import: 37`
* *Defense:* `safety: 13`, `doc: 1`, `test: 1361`, `sync_locks: 14`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 23):` BadMethodCallException, Closure, DateInterval, DatePeriod, DateTime, Illuminate\Contracts\Database\Query\ConditionExpression, Illuminate\Database\Connection, Illuminate\Database\Eloquent\Builder...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tests/Validation/ValidationValidatorTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 3747.56 | **LOC:** 10299 | **CtrlFlow:** 0.4% | **Authorship Centralization:** 25.0%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **482**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Guard Balance (formerly Safety Score) (58.4%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (56.5%), Complexity Load (formerly Cognitive Load) (30.1%), Connectivity (formerly Api Exposure) (12.1%)
- **Documentation Coverage:** 99.7085% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `testCustomValidationObject` **(I/O & Config Routines)** (Impact: 28.2)
  * `testCapitalizedDisplayableValuesAreReplaced` **(I/O & Config Routines)** (Impact: 12.5)
  * `testValidateDecimal` **(I/O & Config Routines)** (Impact: 10.2)
  * `validUrls` **(I/O & Config Routines)** (Impact: 10.0)
  * `testItemAwareSometimesAddingRules` **(Callbacks & Closures)** (Impact: 10.0)
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 2 instances
* *Amplified Cascading Flux:* 22 instances
* *Memory Alloc (weighted view):* 1655
* *State Mutation (weighted view):* 2345
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 36`, `structural_boundaries: 2298`, `args: 420`, `func_start: 344`, `class_start: 6`
* *Risk/State:* `safety_bypasses: 28`, `state_mutation: 2301`, `dead_code: 9`, `fragile_debt: 1`, `duplicate_logic: 33`, `unreferenced_by_name: 288`
* *Architecture:* `api: 347`, `import: 41`
* *Defense:* `safety: 10`, `doc: 1`, `test: 1948`, `sync_locks: 1`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 24):` $attribute, $fail) 
                        if ($value % 4 !== 0) 
                            $fail(':attribute must be divisible by 4', $item) 
            return (bool) $item, $message, $parameters) 
            return str_replace('bar', $rule, $v->errors()->all()[0], $v->errors()->get('name')...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `src/Illuminate/Database/Query/Builder.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 2456.16 | **LOC:** 4951 | **CtrlFlow:** 14.3% | **Authorship Centralization:** 13.3%
- **Blast Radius:** changing it is visible to **41** in-repo importer(s); it depends on **40**; blast radius 2.512; role: Transceiver (Middle-Tier)
- **Top Surface Vectors:** Connectivity (formerly Api Exposure) (100.0%), Guard Balance (formerly Safety Score) (90.1%), Mutation Surface (formerly State Flux) (85.0%), Test Surface (formerly Verification) (80.0%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `where` **(Many-Argument Workhorses)** (Impact: 45.2)
    * *Intent:* /** * Add a basic "where" clause to the query. * * @param \Closure|string|array|\Illuminate\Contract...
  * `upsert` **(Many-Argument Workhorses)** (Impact: 22.0)
    * *Intent:* /** * Insert new records or update the existing ones. * * @param non-empty-string|non-empty-array<in...
  * `insertOrIgnoreReturning` **(Defensive Guards)** (Impact: 19.8)
    * *Intent:* /** * Insert new records into the database and returning specified columns with optional ignoring sp...
  * `having` **(Many-Argument Workhorses)** (Impact: 17.8)
    * *Intent:* /** * Add a "having" clause to the query. * * @param \Illuminate\Contracts\Database\Query\Expression...
  * `addSelect` **(Compute Cores)** (Impact: 15.2)
    * *Intent:* /** * Add a new select column to the query. * * @param mixed $column * @return $this */
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 1 instances
* *Amplified Cascading Flux:* 288 instances
* *Concurrency (weighted view):* 6
* *State Mutation (weighted view):* 1037
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 304`, `structural_boundaries: 717`, `args: 280`, `func_start: 259`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 4`, `state_mutation: 461`, `dead_code: 1`
* *Architecture:* `api: 259`, `concurrency: 1`, `import: 31`
* *Defense:* `safety: 103`, `doc: 289`, `sync_locks: 6`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 2.512
  * `Choke Point (Betweenness):` 0.006463 | `Ripple Effect (Closeness):` 0.095227
  * `Imports (Out-Degree: 20):` $operator, $operator] = $this->prepareValueAndOperator(
            $value, BackedEnum, BuildsQueries, BuildsWhereDateClauses, Closure, DatePeriod, DateTimeInterface...
  * `Imported By (In-Degree: 41):` (Excluded from Brief to save tokens)

### `tests/Support/SupportCollectionTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_12` (Drift: 0.0 IQR)
- **Magnitude:** 2377.38 | **LOC:** 6400 | **CtrlFlow:** 0.5% | **Authorship Centralization:** 12.5%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **43**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Guard Balance (formerly Safety Score) (47.2%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (43.6%), Complexity Load (formerly Cognitive Load) (16.3%), Connectivity (formerly Api Exposure) (13.7%)
- **Documentation Coverage:** 99.7576% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `testSliding` **(I/O & Config Routines)** (Impact: 10.6)
  * `testWhere` **(I/O & Config Routines)** (Impact: 7.4)
  * `testLastWithCallbackAndDefault` **(Callbacks & Closures)** (Impact: 6.4)
  * `testFirstWithDefaultAndWithoutCallback` **(Annotated & Test Methods)** (Impact: 6.2)
  * `testSortByMany` **(I/O & Config Routines)** (Impact: 4.9)
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 1 instances
* *Amplified Cascading Flux:* 21 instances
* *Memory Alloc (weighted view):* 146
* *State Mutation (weighted view):* 966
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 28`, `structural_boundaries: 1519`, `args: 621`, `func_start: 412`, `class_start: 11`
* *Risk/State:* `safety_bypasses: 43`, `state_mutation: 924`, `unreferenced_by_name: 391`
* *Architecture:* `api: 416`, `import: 32`
* *Defense:* `safety: 71`, `doc: 1`, `test: 1053`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 10):` ', 'int']), 2), 3), ArrayAccess, ArrayIterator, ArrayObject, CachingIterator...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tests/Database/DatabaseEloquentModelTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 1930.68 | **LOC:** 4789 | **CtrlFlow:** 0.8% | **Authorship Centralization:** 46.7%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **66**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (85.0%), Guard Balance (formerly Safety Score) (61.7%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (39.5%), Complexity Load (formerly Cognitive Load) (26.0%)
- **Documentation Coverage:** 100.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `set` **(Defensive Guards)** (Impact: 7.1)
  * `__construct` **(Compute Cores)** (Impact: 5.4)
  * `castUsing` **(Defensive Guards)** (Impact: 5.3)
  * `testRelationsWithVariedConnections` **(I/O & Config Routines)** (Impact: 5.0)
  * `testDirtyOnCastedUri` **(I/O & Config Routines)** (Impact: 4.8)
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 3 instances
* *Amplified Cascading Flux:* 44 instances
* *Memory Alloc (weighted view):* 250
* *State Mutation (weighted view):* 962
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 31`, `structural_boundaries: 886`, `args: 342`, `func_start: 322`, `class_start: 69`
* *Risk/State:* `safety_bypasses: 24`, `state_mutation: 874`, `dead_code: 72`, `planned_debt: 11`, `duplicate_logic: 8`, `unreferenced_by_name: 261`
* *Architecture:* `api: 332`, `import: 69`
* *Defense:* `safety: 60`, `test: 617`, `immutability_locks: 1`, `cleanup: 5`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 47):` DateTime, DateTimeImmutable, DateTimeInterface, EloquentTraitBootingCallbackTestStub, Exception, FooBarTrait, Foo\Bar\EloquentModelNamespacedStub, HasFactory...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `src/Illuminate/Collections/Enumerable.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 1829.99 | **LOC:** 1362 | **CtrlFlow:** 6.9% | **Authorship Centralization:** 27.3%
- **Blast Radius:** changing it is visible to **3** in-repo importer(s); it depends on **7**; blast radius 0.293; role: Transceiver (Middle-Tier)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (100.0%), Guard Balance (formerly Safety Score) (97.2%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (56.1%), Complexity Load (formerly Cognitive Load) (29.9%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 23 instances
* *State Mutation (weighted view):* 134
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 11`, `structural_boundaries: 158`, `args: 148`, `func_start: 148`, `class_start: 1`
* *Risk/State:* `state_mutation: 88`
* *Architecture:* `api: 148`, `import: 7`
* *Defense:* `safety: 1`, `doc: 149`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.293
  * `Choke Point (Betweenness):` 1e-06 | `Ripple Effect (Closeness):` 0.00423
  * `Imports (Out-Degree: 2):` CachingIterator, Countable, Illuminate\Contracts\Support\Arrayable, Illuminate\Contracts\Support\Jsonable, IteratorAggregate, JsonSerializable, Traversable
  * `Imported By (In-Degree: 3):` (Excluded from Brief to save tokens)

### `tests/Database/DatabaseEloquentBuilderTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 1528.04 | **LOC:** 3282 | **CtrlFlow:** 5.7% | **Authorship Centralization:** 37.5%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **23**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (85.0%), Guard Balance (formerly Safety Score) (73.9%), Complexity Load (formerly Cognitive Load) (31.3%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (28.5%)
- **Documentation Coverage:** 100.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `testOrWhereMorphedToCollectionWithDifferentModels` **(I/O & Config Routines)** (Impact: 8.0)
  * `testOrWhereNotMorphedToCollectionWithDifferentModels` **(I/O & Config Routines)** (Impact: 8.0)
  * `testWhereMorphedToCollectionWithDifferentModels` **(I/O & Config Routines)** (Impact: 7.0)
  * `testWhereNotMorphedToCollectionWithDifferentModels` **(I/O & Config Routines)** (Impact: 7.0)
  * `testHasWithConstraintsWithOrWhereAndSubqueryInRelationFromClause` **(Callbacks & Closures)** (Impact: 6.9)
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 5 instances
* *Amplified Cascading Flux:* 18 instances
* *Memory Alloc (weighted view):* 275
* *State Mutation (weighted view):* 723
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 146`, `structural_boundaries: 759`, `args: 311`, `func_start: 232`, `class_start: 18`
* *Risk/State:* `safety_bypasses: 5`, `high_risk_execution: 6`, `state_mutation: 687`, `duplicate_logic: 6`, `unreferenced_by_name: 209`
* *Architecture:* `io: 2`, `api: 227`, `import: 23`
* *Defense:* `safety: 3`, `test: 338`, `immutability_locks: 1`, `cleanup: 4`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 15):` BadMethodCallException, Closure, Illuminate\Database\Connection, Illuminate\Database\ConnectionInterface, Illuminate\Database\ConnectionResolverInterface, Illuminate\Database\Eloquent\Builder, Illuminate\Database\Eloquent\Collection, Illuminate\Database\Eloquent\Model...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tests/Http/HttpClientTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_10` (Drift: 0.0 IQR)
- **Magnitude:** 1395.18 | **LOC:** 4906 | **CtrlFlow:** 4.2% | **Authorship Centralization:** 19.4%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **53**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (77.1%), Guard Balance (formerly Safety Score) (44.0%), Connectivity (formerly Api Exposure) (12.8%), Complexity Load (formerly Cognitive Load) (8.7%)
- **Documentation Coverage:** 99.8092% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `testHeaderValuesAreSerialized` **(I/O & Config Routines)** (Impact: 12.6)
  * `testCanAssertAgainstOrderOfHttpRequestsWithCallablesAndHeadersFailsCorrectly` **(I/O & Config Routines)** (Impact: 10.9)
  * `testCanAssertAgainstOrderOfHttpRequestsWithCallablesAndHeaders` **(I/O & Config Routines)** (Impact: 10.8)
  * `testCanSendMultipartDataWithFileAndArrayValues` **(I/O & Config Routines)** (Impact: 10.2)
  * `testMultipartHeaderValuesAreSerialized` **(I/O & Config Routines)** (Impact: 8.5)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 10 instances
* *State Mutation (weighted view):* 405
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 160`, `structural_boundaries: 808`, `args: 472`, `func_start: 264`, `class_start: 4`
* *Risk/State:* `state_mutation: 385`, `unreferenced_by_name: 255`
* *Architecture:* `io: 49`, `api: 261`, `import: 53`
* *Defense:* `safety: 112`, `doc: 2`, `test: 339`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 25):` Exception, GuzzleHttp\Client, GuzzleHttp\Exception\ConnectException, GuzzleHttp\Exception\RequestException, GuzzleHttp\Exception\TooManyRedirectsException, GuzzleHttp\Middleware, GuzzleHttp\Promise\Create, GuzzleHttp\Promise\PromiseInterface...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `src/Illuminate/Validation/Concerns/ValidatesAttributes.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 1376.52 | **LOC:** 2957 | **CtrlFlow:** 23.2% | **Authorship Centralization:** 13.6%
- **Blast Radius:** changing it is visible to **1** in-repo importer(s); it depends on **104**; blast radius 0.223; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (99.5%), Test Surface (formerly Verification) (80.0%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (70.8%), Guard Balance (formerly Safety Score) (54.5%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `failsBasicDimensionChecks` **(Stateful Encapsulated Methods)** (Impact: 24.4)
    * *Intent:* /** * Test if the given width and height fail any conditions. * * @param array<string,string> $param...
  * `validateGt` **(Defensive Guards)** (Impact: 19.9)
    * *Intent:* /** * Validate that an attribute is greater than another attribute. * * @param string $attribute * @...
  * `validateGte` **(Defensive Guards)** (Impact: 19.9)
    * *Intent:* /** * Validate that an attribute is greater than or equal another attribute. * * @param string $attr...
  * `validateLt` **(Defensive Guards)** (Impact: 19.7)
    * *Intent:* /** * Validate that an attribute is less than another attribute. * * @param string $attribute * @par...
  * `validateLte` **(Defensive Guards)** (Impact: 19.7)
    * *Intent:* /** * Validate that an attribute is less than or equal another attribute. * * @param string $attribu...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 82 instances
* *State Mutation (weighted view):* 264
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 322`, `structural_boundaries: 500`, `args: 154`, `func_start: 147`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 10`, `state_mutation: 100`, `dead_code: 1`
* *Architecture:* `api: 117`, `import: 27`
* *Defense:* `safety: 113`, `doc: 147`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.223
  * `Choke Point (Betweenness):` 0.000403 | `Ripple Effect (Closeness):` 0.0083
  * `Imports (Out-Degree: 11):` $parameters, $rule)
    
        if (count($parameters) < $count) 
            throw new InvalidArgumentException("Validation rule $rule requires at least $count parameters.", $this->getValue($key))) 
                return false, $this->getValue($key))) 
                return true, $value)
    
        $acceptable = ['no', $value)
    
        $acceptable = ['yes', $value)
    
        if (is_null($value)) 
            return false, '0'...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `src/Illuminate/Support/Str.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 1339.38 | **LOC:** 2177 | **CtrlFlow:** 19.3% | **Authorship Centralization:** 11.1%
- **Blast Radius:** changing it is visible to **235** in-repo importer(s); it depends on **18**; blast radius 17.241; role: Pure Producer (Foundation)
- **Top Surface Vectors:** Connectivity (formerly Api Exposure) (100.0%), Mutation Surface (formerly State Flux) (100.0%), Guard Balance (formerly Safety Score) (94.9%), Test Surface (formerly Verification) (80.0%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `isUrl` **(Compute Cores)** (Impact: 45.6)
    * *Intent:* /** * Determine if a given value is a valid URL. * * @param mixed $value * @param string[] $protocol...
  * `apa` **(Compute Cores)** (Impact: 23.4)
    * *Intent:* /** * Convert the given string to APA-style title case. * * See: https://apastyle.apa.org/style-gram...
  * `is` **(Many-Argument Workhorses)** (Impact: 19.8)
    * *Intent:* /** * Determine if a given string matches a given pattern. * * @param string|iterable<string> $patte...
  * `contains` **(Many-Argument Workhorses)** (Impact: 17.3)
    * *Intent:* /** * Determine if a given string contains a given substring. * * @param string $haystack * @param s...
  * `password` **(Many-Argument Workhorses)** (Impact: 16.3)
    * *Intent:* /** * Generate a random, secure password. * * @param int $length * @param bool $letters * @param boo...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 183 instances
* *State Mutation (weighted view):* 607
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 196`, `structural_boundaries: 349`, `args: 132`, `func_start: 110`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 241`
* *Architecture:* `api: 109`, `import: 18`
* *Defense:* `safety: 43`, `doc: 117`, `immutability_locks: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 17.241
  * `Choke Point (Betweenness):` 3.8e-05 | `Ripple Effect (Closeness):` 0.209536
  * `Imports (Out-Degree: 1):` Closure, Illuminate\Support\Traits\Macroable, League\CommonMark\Environment\Environment, League\CommonMark\Extension\GithubFlavoredMarkdownExtension, League\CommonMark\Extension\InlinesOnly\InlinesOnlyExtension, League\CommonMark\GithubFlavoredMarkdownConverter, League\CommonMark\MarkdownConverter, Macroable...
  * `Imported By (In-Degree: 235):` (Excluded from Brief to save tokens)

### `src/Illuminate/Collections/LazyCollection.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_12` (Drift: 0.0 IQR)
- **Magnitude:** 1283.14 | **LOC:** 1977 | **CtrlFlow:** 19.1% | **Authorship Centralization:** 15.8%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **15**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (100.0%), Concurrency Surface (formerly Concurrency) (100.0%), Debt Markers (formerly Tech Debt) (99.6%), Guard Balance (formerly Safety Score) (97.8%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `chunk` **(Compute Cores)** (Impact: 19.2)
    * *Intent:* /** * Chunk the collection into chunks of the given size. * * @param int $size * @param bool $preser...
  * `select` **(Defensive Guards)** (Impact: 18.4)
    * *Intent:* /** * Select specific values from the items within the collection. * * @param \Illuminate\Support\En...
  * `sliding` **(Compute Cores)** (Impact: 15.7)
    * *Intent:* /** * Create chunks representing a "sliding window" view of the items in the collection. * * @param ...
  * `only` **(Defensive Guards)** (Impact: 15.5)
    * *Intent:* /** * Get the items with the specified keys. * * @param \Illuminate\Support\Enumerable<array-key, TK...
  * `pluck` **(Defensive Guards)** (Impact: 15.2)
    * *Intent:* /** * Get the values of a given key. * * @param string|array<array-key, string> $value * @param stri...
**Contextual Mitigations & Amplifications:**
* *Mitigated Danger:* 1 instances
* *Mitigated Memory Allocs:* 2 instances
* *Amplified Race Conditions:* 22 instances
* *Amplified Cascading Flux:* 144 instances
* *High Risk Execution (weighted view):* 36
* *Concurrency (weighted view):* 158
* *Memory Alloc (weighted view):* 60
* *State Mutation (weighted view):* 463
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 205`, `structural_boundaries: 488`, `args: 155`, `func_start: 109`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 10`, `high_risk_execution: 37`, `state_mutation: 175`, `unreferenced_by_name: 85`
* *Architecture:* `api: 102`, `concurrency: 48`, `import: 14`
* *Defense:* `safety: 35`, `doc: 118`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 4):` ArrayIterator, Closure, DateInterval, DateTimeImmutable, DateTimeInterface, EnumeratesValues, Generator, Illuminate\Contracts\Support\CanBeEscapedWhenCastToString...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `src/Illuminate/Database/Eloquent/Concerns/HasAttributes.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_16` (Drift: 0.0 IQR)
- **Magnitude:** 1173.3 | **LOC:** 2590 | **CtrlFlow:** 21.5% | **Authorship Centralization:** 6.7%
- **Blast Radius:** changing it is visible to **2** in-repo importer(s); it depends on **45**; blast radius 0.688; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (85.0%), Test Surface (formerly Verification) (80.0%), Guard Balance (formerly Safety Score) (76.0%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (52.1%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `castAttribute` **(Many-Argument Workhorses)** (Impact: 51.7)
    * *Intent:* /** * Cast an attribute to a native PHP type. * * @param string $key * @param mixed $value * @return...
  * `addCastAttributesToArray` **(Defensive Guards)** (Impact: 35.3)
    * *Intent:* /** * Add the casted attributes to the attributes array. * * @param array<string, mixed> $attributes...
  * `originalIsEquivalent` **(Defensive Guards)** (Impact: 34.9)
    * *Intent:* /** * Determine if the new and old values for a given key are equivalent. * * @param string $key * @...
  * `setAttribute` **(Defensive Guards)** (Impact: 26.9)
    * *Intent:* /** * Set a given attribute on the model. * * @param string $key * @param mixed $value * @return mix...
  * `transformModelValue` **(Stateful Encapsulated Methods)** (Impact: 19.1)
    * *Intent:* /** * Transform a raw model value using mutators, casts, etc. * * @param string $key * @param mixed ...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 121 instances
* *State Mutation (weighted view):* 411
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 279`, `structural_boundaries: 434`, `args: 136`, `func_start: 125`, `class_start: 1`
* *Risk/State:* `state_mutation: 169`, `planned_debt: 2`
* *Architecture:* `api: 60`, `import: 46`
* *Defense:* `safety: 67`, `doc: 143`, `cleanup: 6`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.688
  * `Choke Point (Betweenness):` 0.003905 | `Ripple Effect (Closeness):` 0.127886
  * `Imports (Out-Degree: 28):` BackedEnum, Brick\Math\BigDecimal, Brick\Math\Exception\MathException, Brick\Math\RoundingMode, Carbon\CarbonImmutable, Carbon\CarbonInterface, DateTimeImmutable, DateTimeInterface...
  * `Imported By (In-Degree: 2):` (Excluded from Brief to save tokens)

### `src/Illuminate/Database/Eloquent/Builder.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 1143.4 | **LOC:** 2372 | **CtrlFlow:** 15.2% | **Authorship Centralization:** 15.4%
- **Blast Radius:** changing it is visible to **48** in-repo importer(s); it depends on **25**; blast radius 1.73; role: Transceiver (Middle-Tier)
- **Top Surface Vectors:** Guard Balance (formerly Safety Score) (86.6%), Mutation Surface (formerly State Flux) (85.0%), Test Surface (formerly Verification) (80.0%), Connectivity (formerly Api Exposure) (79.0%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `prepareNestedWithRelationships` **(Stateful Encapsulated Methods)** (Impact: 19.6)
    * *Intent:* /** * Prepare nested with relationships. * * @param array $relations * @param string $prefix * @retu...
  * `__call` **(Compute Cores)** (Impact: 13.9)
    * *Intent:* /** * Dynamically handle calls into the query instance. * * @param string $method * @param array $pa...
  * `paginate` **(Many-Argument Workhorses)** (Impact: 13.1)
    * *Intent:* /** * Paginate the given query. * * @param int|null|\Closure $perPage * @param array|string $columns...
  * `addUpdatedAtColumn` **(Stateful Encapsulated Methods)** (Impact: 13.1)
    * *Intent:* /** * Add the "updated at" column to an array of values. * * @param array $values * @return array */...
  * `whereKey` **(Defensive Guards)** (Impact: 12.4)
    * *Intent:* /** * Add a where clause on the primary key to the query. * * @param mixed $id * @return $this */
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 147 instances
* *State Mutation (weighted view):* 509
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 167`, `structural_boundaries: 374`, `args: 147`, `func_start: 121`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 215`
* *Architecture:* `api: 102`, `import: 22`
* *Defense:* `safety: 70`, `doc: 136`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 1.73
  * `Choke Point (Betweenness):` 0.006719 | `Ripple Effect (Closeness):` 0.109575
  * `Imports (Out-Degree: 14):` $results, BadMethodCallException, Closure, Exception, Illuminate\Contracts\Database\Eloquent\Builder, Illuminate\Contracts\Database\Query\Expression, Illuminate\Contracts\Support\Arrayable, Illuminate\Database\Concerns\BuildsQueries...
  * `Imported By (In-Degree: 48):` (Excluded from Brief to save tokens)

### `src/Illuminate/Collections/Collection.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 1128.18 | **LOC:** 2006 | **CtrlFlow:** 16.2% | **Authorship Centralization:** 16.0%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **13**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (100.0%), Debt Markers (formerly Tech Debt) (99.9%), Guard Balance (formerly Safety Score) (95.3%), Test Surface (formerly Verification) (80.0%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `sortByMany` **(Many-Argument Workhorses)** (Impact: 30.3)
    * *Intent:* /** * Sort the collection using multiple comparisons. * * @param array<array-key, (callable(TValue, ...
  * `groupBy` **(Defensive Guards)** (Impact: 21.3)
    * *Intent:* /** * {@inheritDoc} */
  * `implode` **(Defensive Guards)** (Impact: 14.6)
    * *Intent:* /** * Concatenate values of a given key as a string. * * @param (callable(TValue, TKey): mixed)|stri...
  * `sortBy` **(Many-Argument Workhorses)** (Impact: 13.6)
    * *Intent:* /** * Sort the collection using the given callback. * * @param array<array-key, (callable(TValue, TV...
  * `split` **(Compute Cores)** (Impact: 10.2)
    * *Intent:* /** * Split a collection into a certain number of groups. * * @param int $numberOfGroups * @return (...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 169 instances
* *State Mutation (weighted view):* 538
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 146`, `structural_boundaries: 321`, `args: 128`, `func_start: 115`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 4`, `state_mutation: 200`, `dead_code: 1`, `unreferenced_by_name: 82`
* *Architecture:* `api: 112`, `import: 11`
* *Defense:* `safety: 34`, `doc: 118`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 5):` ArrayAccess, ArrayIterator, EnumeratesValues, Illuminate\Contracts\Support\CanBeEscapedWhenCastToString, Illuminate\Support\Traits\EnumeratesValues, Illuminate\Support\Traits\Macroable, Illuminate\Support\Traits\TransformsToResourceCollection, InvalidArgumentException...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `src/Illuminate/Database/Eloquent/Model.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 1117.64 | **LOC:** 2896 | **CtrlFlow:** 14.3% | **Authorship Centralization:** 10.0%
- **Blast Radius:** changing it is visible to **273** in-repo importer(s); it depends on **49**; blast radius 20.591; role: Pure Producer (Foundation)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (85.0%), Connectivity (formerly Api Exposure) (83.7%), Test Surface (formerly Verification) (80.0%), Guard Balance (formerly Safety Score) (77.5%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `incrementOrDecrementEach` **(Stateful Encapsulated Methods)** (Impact: 19.9)
    * *Intent:* /** * Run the incrementEach or decrementEach method on the model. * * @param array<string, float|int...
  * `initializeModelAttributes` **(Defensive Guards)** (Impact: 19.6)
    * *Intent:* /** * Initialize the model attributes from class attributes. * * @return void */
  * `resolveClassAttribute` **(Stateful Encapsulated Methods)** (Impact: 19.4)
    * *Intent:* /** * Resolve a class attribute value from the model. * * @template TAttribute of object * * @param ...
  * `fill` **(Defensive Guards)** (Impact: 17.6)
    * *Intent:* /** * Fill the model with an array of attributes. * * @param array<string, mixed> $attributes * @ret...
  * `incrementOrDecrement` **(Stateful Encapsulated Methods)** (Impact: 14.8)
    * *Intent:* /** * Run the increment or decrement method on the model. * * @param string $column * @param float|i...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 2 instances
* *Amplified Cascading Flux:* 103 instances
* *Memory Alloc (weighted view):* 19
* *State Mutation (weighted view):* 408
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 180`, `structural_boundaries: 428`, `args: 182`, `func_start: 162`, `class_start: 1`
* *Risk/State:* `state_mutation: 202`
* *Architecture:* `api: 134`, `import: 38`
* *Defense:* `safety: 54`, `doc: 199`, `immutability_locks: 2`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 20.591
  * `Choke Point (Betweenness):` 0.026058 | `Ripple Effect (Closeness):` 0.168337
  * `Imports (Out-Degree: 35):` ArrayAccess, Closure, Concerns\GuardsAttributes, Concerns\HasAttributes, Concerns\HasEvents, Concerns\HasGlobalScopes, Concerns\HasRelationships, Concerns\HasTimestamps...
  * `Imported By (In-Degree: 273):` (Excluded from Brief to save tokens)

### `tests/Routing/RoutingRouteTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_12` (Drift: 0.0 IQR)
- **Magnitude:** 1101.64 | **LOC:** 2763 | **CtrlFlow:** 2.3% | **Authorship Centralization:** 25.0%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **45**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Guard Balance (formerly Safety Score) (69.4%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (26.6%), Complexity Load (formerly Cognitive Load) (25.0%), Connectivity (formerly Api Exposure) (12.7%)
- **Documentation Coverage:** 100.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `testBasicDispatchingOfRoutes` **(Callbacks & Closures)** (Impact: 14.5)
  * `testWherePatternsProperlyFilter` **(Callbacks & Closures)** (Impact: 12.6)
  * `testParametersWithoutNulls` **(Callbacks & Closures)** (Impact: 8.2)
  * `testControllerCallActionMethodParameters` **(I/O & Config Routines)** (Impact: 5.0)
  * `testMatchesMethodAgainstRequests` **(Callbacks & Closures)** (Impact: 5.0)
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 6 instances
* *Amplified Cascading Flux:* 63 instances
* *Memory Alloc (weighted view):* 128
* *State Mutation (weighted view):* 544
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 52`, `structural_boundaries: 781`, `args: 352`, `func_start: 162`, `class_start: 35`
* *Risk/State:* `safety_bypasses: 34`, `state_mutation: 418`, `duplicate_logic: 18`, `unreferenced_by_name: 110`
* *Architecture:* `api: 164`, `import: 44`
* *Defense:* `safety: 15`, `doc: 2`, `test: 313`, `immutability_locks: 3`, `cleanup: 18`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 34):` Attribute, Closure, DateTime, Exception, Illuminate\Auth\Middleware\Authenticate, Illuminate\Auth\Middleware\Authorize, Illuminate\Config\Repository, Illuminate\Container\Attributes\Config...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tests/Testing/TestResponseTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 1080.72 | **LOC:** 3368 | **CtrlFlow:** 0.5% | **Authorship Centralization:** 23.1%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **49**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Guard Balance (formerly Safety Score) (64.7%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (43.1%), Complexity Load (formerly Cognitive Load) (13.6%), Connectivity (formerly Api Exposure) (13.1%)
- **Documentation Coverage:** 100.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `testInvalidWithListOfErrors` **(I/O & Config Routines)** (Impact: 4.3)
  * `testAssertExactJsonStructure` **(I/O & Config Routines)** (Impact: 4.0)
  * `testAssertingKeyIsInvalidErrorMessage` **(Defensive Guards)** (Impact: 4.0)
  * `testAssertSessionOnlyValidationErrorsUsingAssertOnlyInvalid` **(I/O & Config Routines)** (Impact: 3.8)
  * `testAssertSessionHasNoErrors` **(I/O & Config Routines)** (Impact: 3.4)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 14 instances
* *State Mutation (weighted view):* 424
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 12`, `structural_boundaries: 673`, `args: 260`, `func_start: 219`, `class_start: 8`
* *Risk/State:* `state_mutation: 396`, `unreferenced_by_name: 213`
* *Architecture:* `io: 9`, `api: 218`, `concurrency: 3`, `import: 32`
* *Defense:* `safety: 64`, `test: 39`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 22):` $e->getMessage(), 'FOO']], 'Your first name must be at least 1 character', 'Your first name must be at least 1 character']], 'last_name' => 'The last name field is required.', 'last_name' => 'required'], 'last_name' => [
                'Your last name is required', 'last_name' => ['The last name field is required.']...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tests/Database/DatabaseEloquentIntegrationTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_7` (Drift: 0.0 IQR)
- **Magnitude:** 1002.6 | **LOC:** 3092 | **CtrlFlow:** 2.1% | **Authorship Centralization:** 80.0%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **28**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Guard Balance (formerly Safety Score) (90.1%), Mutation Surface (formerly State Flux) (84.4%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (21.4%), Complexity Load (formerly Cognitive Load) (15.5%)
- **Documentation Coverage:** 98.1763% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `createSchema` **(Callbacks & Closures)** (Impact: 12.4)
  * `testBasicModelRetrieval` **(I/O & Config Routines)** (Impact: 8.4)
    * *Intent:* /** * Tests... */
  * `testPaginatedModelCollectionRetrievalUsingCallablePerPage` **(Callbacks & Closures)** (Impact: 8.2)
  * `testChunksWithLimitsAndOffsets` **(I/O & Config Routines)** (Impact: 5.5)
  * `testChunkByIdWithLimitsAndOffsets` **(I/O & Config Routines)** (Impact: 5.5)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 29 instances
* *State Mutation (weighted view):* 444
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 50`, `structural_boundaries: 444`, `args: 252`, `func_start: 168`, `class_start: 29`
* *Risk/State:* `safety_bypasses: 284`, `state_mutation: 386`, `dead_code: 1`, `duplicate_logic: 2`, `unreferenced_by_name: 138`
* *Architecture:* `api: 167`, `import: 29`
* *Defense:* `safety: 19`, `doc: 7`, `test: 360`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 22):` DateTimeInterface, Exception, HasUuids, Illuminate\Database\Capsule\Manager, Illuminate\Database\Eloquent\Builder, Illuminate\Database\Eloquent\Collection, Illuminate\Database\Eloquent\Concerns\HasUuids, Illuminate\Database\Eloquent\Model...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `src/Illuminate/Testing/TestResponse.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 987.18 | **LOC:** 2083 | **CtrlFlow:** 15.5% | **Authorship Centralization:** 14.3%
- **Blast Radius:** changing it is visible to **3** in-repo importer(s); it depends on **31**; blast radius 0.194; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Connectivity (formerly Api Exposure) (73.7%), Guard Balance (formerly Safety Score) (66.9%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (55.9%), Complexity Load (formerly Cognitive Load) (15.3%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `assertInvalid` **(Many-Argument Workhorses)** (Impact: 30.4)
    * *Intent:* /** * Assert that the response has the given validation errors. * * @param string|array|null $errors...
  * `assertJsonValidationErrors` **(Compute Cores)** (Impact: 22.9)
    * *Intent:* /** * Assert that the response has the given JSON validation errors. * * @param string|array $errors...
  * `assertValid` **(Many-Argument Workhorses)** (Impact: 21.7)
    * *Intent:* /** * Assert that the given keys do not have validation errors. * * @param string|array|null $keys *...
  * `assertSessionDoesntHaveErrors` **(Defensive Guards)** (Impact: 15.3)
    * *Intent:* /** * Assert that the session is missing the given errors. * * @param string|array $keys * @param st...
  * `assertSessionHasInput` **(Defensive Guards)** (Impact: 15.2)
    * *Intent:* /** * Assert that the session has a given value in the flashed input array. * * @param string|array ...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 111 instances
* *State Mutation (weighted view):* 374
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 166`, `structural_boundaries: 294`, `args: 109`, `func_start: 102`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 4`, `high_risk_execution: 2`, `state_mutation: 152`
* *Architecture:* `io: 6`, `api: 101`, `import: 27`
* *Defense:* `safety: 54`, `doc: 107`, `test: 148`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.194
  * `Choke Point (Betweenness):` 4.4e-05 | `Ripple Effect (Closeness):` 0.001144
  * `Imports (Out-Degree: 19):` ArrayAccess, Closure, Concerns\AssertsStatusCodes, Conditionable, Dumpable, Illuminate\Contracts\Support\MessageBag, Illuminate\Contracts\View\View, Illuminate\Cookie\CookieValuePrefix...
  * `Imported By (In-Degree: 3):` (Excluded from Brief to save tokens)

### `src/Illuminate/Http/Client/PendingRequest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_16` (Drift: 0.0 IQR)
- **Magnitude:** 982.54 | **LOC:** 2136 | **CtrlFlow:** 18.8% | **Authorship Centralization:** 38.7%
- **Blast Radius:** changing it is visible to **1** in-repo importer(s); it depends on **39**; blast radius 0.146; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (100.0%), Test Surface (formerly Verification) (80.0%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (77.4%), Guard Balance (formerly Safety Score) (74.6%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `send` **(Defensive Guards)** (Impact: 50.0)
    * *Intent:* /** * Send the request to the given URL. * * @param string $method * @param string $url * @param arr...
  * `handlePromiseResponse` **(Many-Argument Workhorses)** (Impact: 41.4)
    * *Intent:* /** * Handle the response of an asynchronous request. * * @param \Illuminate\Http\Client\Response|\T...
  * `parseRequestData` **(Stateful Encapsulated Methods)** (Impact: 31.5)
    * *Intent:* /** * Get the request data as an array so that we can attach it to the request for convenient assert...
  * `normalizeRequestOptions` **(Stateful Encapsulated Methods)** (Impact: 21.6)
    * *Intent:* /** * Normalize the given request options. * * @param array $options * @return array */
  * `pool` **(Defensive Guards)** (Impact: 21.3)
    * *Intent:* /** * Send a pool of asynchronous requests concurrently. * * @param (callable(\Illuminate\Http\Clien...
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 1 instances
* *Amplified Cascading Flux:* 98 instances
* *Concurrency (weighted view):* 6
* *State Mutation (weighted view):* 367
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 191`, `structural_boundaries: 360`, `args: 132`, `func_start: 100`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `high_risk_execution: 1`, `state_mutation: 171`, `planned_debt: 6`
* *Architecture:* `io: 5`, `api: 72`, `concurrency: 1`, `import: 32`
* *Defense:* `safety: 85`, `doc: 130`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.146
  * `Choke Point (Betweenness):` 1e-06 | `Ripple Effect (Closeness):` 0.000327
  * `Imports (Out-Degree: 14):` $domain), Closure, Conditionable, Exception, GuzzleHttp\Client, GuzzleHttp\Cookie\CookieJar, GuzzleHttp\Exception\ConnectException, GuzzleHttp\Exception\RequestException...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `src/Illuminate/Container/Container.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_16` (Drift: 0.0 IQR)
- **Magnitude:** 921.4 | **LOC:** 1857 | **CtrlFlow:** 19.6% | **Authorship Centralization:** 16.7%
- **Blast Radius:** changing it is visible to **170** in-repo importer(s); it depends on **20**; blast radius 6.824; role: Pure Producer (Foundation)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (100.0%), Guard Balance (formerly Safety Score) (84.9%), Connectivity (formerly Api Exposure) (54.9%), Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (48.5%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `resolve` **(Many-Argument Workhorses)** (Impact: 27.2)
    * *Intent:* /** * Resolve the given type from the container. * * @template TClass of object * * @param string|cl...
  * `getConcreteBindingFromAttributes` **(Stateful Encapsulated Methods)** (Impact: 18.1)
    * *Intent:* /** * Get the concrete binding for an abstract from the Bind attribute. * * @param string $abstract ...
  * `resolveClass` **(Stateful Encapsulated Methods)** (Impact: 15.5)
    * *Intent:* /** * Resolve a class based dependency from the container. * * @return mixed * * @throws \Illuminate...
  * `resolveDependencies` **(Stateful Encapsulated Methods)** (Impact: 14.6)
    * *Intent:* /** * Resolve all of the dependencies from the ReflectionParameters. * * @param \ReflectionParameter...
  * `bind` **(Many-Argument Workhorses)** (Impact: 13.8)
    * *Intent:* /** * Register a binding with the container. * * @param \Closure|string $abstract * @param \Closure|...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 115 instances
* *State Mutation (weighted view):* 403
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 164`, `structural_boundaries: 239`, `args: 94`, `func_start: 87`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 173`
* *Architecture:* `api: 57`, `concurrency: 1`, `import: 20`
* *Defense:* `safety: 72`, `doc: 112`, `cleanup: 8`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 6.824
  * `Choke Point (Betweenness):` 0.005257 | `Ripple Effect (Closeness):` 0.125835
  * `Imports (Out-Degree: 10):` ArrayAccess, Closure, Exception, Illuminate\Container\Attributes\Bind, Illuminate\Container\Attributes\Scoped, Illuminate\Container\Attributes\Singleton, Illuminate\Contracts\Container\BindingResolutionException, Illuminate\Contracts\Container\CircularDependencyException...
  * `Imported By (In-Degree: 170):` (Excluded from Brief to save tokens)

### `src/Illuminate/Collections/Arr.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 815.56 | **LOC:** 1319 | **CtrlFlow:** 23.9% | **Authorship Centralization:** 10.5%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **13**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Mutation Surface (formerly State Flux) (100.0%), Debt Markers (formerly Tech Debt) (98.0%), Guard Balance (formerly Safety Score) (90.0%), Test Surface (formerly Verification) (80.0%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `random` **(Defensive Guards)** (Impact: 25.8)
    * *Intent:* /** * Get one or a specified number of random values from an array. * * @param array $array * @param...
  * `get` **(Many-Argument Workhorses)** (Impact: 19.4)
    * *Intent:* /** * Get an item from an array using "dot" notation. * * @param \ArrayAccess|array $array * @param ...
  * `forget` **(Many-Argument Workhorses)** (Impact: 19.1)
    * *Intent:* /** * Remove one or many array items from a given array using "dot" notation. * * @param array $arra...
  * `has` **(Compute Cores)** (Impact: 18.6)
    * *Intent:* /** * Check if an item or items exist in an array using "dot" notation. * * @param \ArrayAccess|arra...
  * `pluck` **(Defensive Guards)** (Impact: 17.6)
    * *Intent:* /** * Pluck an array of values from an array. * * @param iterable $array * @param string|array|int|C...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 103 instances
* *State Mutation (weighted view):* 328
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 151`, `structural_boundaries: 217`, `args: 68`, `func_start: 60`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 122`, `dead_code: 1`, `unreferenced_by_name: 40`
* *Architecture:* `api: 59`, `import: 13`
* *Defense:* `safety: 42`, `doc: 60`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 4):` ArgumentCountError, ArrayAccess, Closure, Illuminate\Contracts\Support\Arrayable, Illuminate\Contracts\Support\Jsonable, Illuminate\Support\Traits\Macroable, InvalidArgumentException, JsonSerializable...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `src/Illuminate/Database/Schema/Blueprint.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 803.8 | **LOC:** 2007 | **CtrlFlow:** 10.1% | **Authorship Centralization:** 12.5%
- **Blast Radius:** changing it is visible to **152** in-repo importer(s); it depends on **13**; blast radius 4.853; role: Pure Producer (Foundation)
- **Top Surface Vectors:** Connectivity (formerly Api Exposure) (100.0%), Mutation Surface (formerly State Flux) (85.0%), Guard Balance (formerly Safety Score) (83.1%), Test Surface (formerly Verification) (80.0%)
- **Documentation Coverage:** 0.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `addFluentIndexes` **(I/O & Config Routines)** (Impact: 21.6)
    * *Intent:* /** * Add the index commands fluently specified on columns. * * @return void */
  * `foreignIdFor` **(Defensive Guards)** (Impact: 9.9)
    * *Intent:* /** * Create a foreign ID column for the given model. * * @param \Illuminate\Database\Eloquent\Model...
  * `toSql` **(I/O & Config Routines)** (Impact: 9.6)
    * *Intent:* /** * Get the raw SQL statements for the blueprint. * * @return array */
  * `addAlterCommands` **(I/O & Config Routines)** (Impact: 8.7)
    * *Intent:* /** * Add the alter commands if whenever needed. * * @return void */
  * `morphs` **(Compute Cores)** (Impact: 8.5)
    * *Intent:* /** * Add the proper columns for a polymorphic table. * * @param string $name * @param string|null $...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 67 instances
* *State Mutation (weighted view):* 288
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 82`, `structural_boundaries: 300`, `args: 144`, `func_start: 136`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 154`
* *Architecture:* `api: 130`, `import: 13`
* *Defense:* `safety: 24`, `doc: 147`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 4.853
  * `Choke Point (Betweenness):` 0.002948 | `Ripple Effect (Closeness):` 0.066336
  * `Imports (Out-Degree: 9):` Closure, Illuminate\Database\Connection, Illuminate\Database\Eloquent\Concerns\HasUlids, Illuminate\Database\Query\Expression, Illuminate\Database\Schema\Grammars\Grammar, Illuminate\Database\Schema\Grammars\MariaDbGrammar, Illuminate\Database\Schema\Grammars\MySqlGrammar, Illuminate\Database\Schema\Grammars\SQLiteGrammar...
  * `Imported By (In-Degree: 152):` (Excluded from Brief to save tokens)

### `tests/Support/SupportHelpersTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_10` (Drift: 0.0 IQR)
- **Magnitude:** 800.96 | **LOC:** 2383 | **CtrlFlow:** 3.0% | **Authorship Centralization:** 27.3%
- **Blast Radius:** nothing in-repo imports it (entrypoint or orphan); it depends on **32**; blast radius 0.142; role: Pure Consumer (Orchestrator)
- **Top Surface Vectors:** Historical Churn (predictive layer, promotion pending #2987) (formerly Churn) (47.3%), Guard Balance (formerly Safety Score) (44.4%), Connectivity (formerly Api Exposure) (12.5%), Complexity Load (formerly Cognitive Load) (8.7%)
- **Documentation Coverage:** 100.0% of unit weight undocumented
**Top Internal Functions/Classes:**
  * `testEnvDefault` **(I/O & Config Routines)** (Impact: 7.7)
  * `testProxyCanEagerlySetPropertiesAndThenAlsoSetThemOnActualObject` **(Callbacks & Closures)** (Impact: 4.4)
  * `__construct` **(Parameter Forwarders)** (Impact: 3.8)
  * `testObjectGetDefaultValue` **(Interface Declarations)** (Impact: 3.5)
  * `testRetryWithPassingSleepCallback` **(Callbacks & Closures)** (Impact: 3.4)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 50 instances
* *State Mutation (weighted view):* 306
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 57`, `structural_boundaries: 358`, `args: 223`, `func_start: 143`, `class_start: 15`
* *Risk/State:* `safety_bypasses: 9`, `state_mutation: 206`, `duplicate_logic: 2`, `unreferenced_by_name: 135`
* *Architecture:* `api: 147`, `import: 31`
* *Defense:* `safety: 24`, `test: 361`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.142
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 8):` ArrayAccess, ArrayIterator, Carbon\CarbonInterval, Countable, Error, Illuminate\Contracts\Support\Htmlable, Illuminate\Database\Eloquent\Model, Illuminate\Filesystem\Filesystem...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

## 12. ARCHITECTURAL DRIFT ANOMALIES & ANTI-PATTERNS
> **AI CONTEXT:** Pay close attention to 'Anti-Pattern' files. These files blend in globally (Low Global Drift), but heavily violate the standard conventions of their native programming language (High Local Drift). 'Mixed-Responsibility' files sit perfectly between two global archetypes (Delta <= 0.9 IQR), indicating a violation of the Single Responsibility Principle.

*No highly conflicted/drifting files detected within the 0.9 IQR threshold.*

## 12.5 STRATEGIC REFACTORING TARGETS (Volatility & Authorship Centralization)
> **AI CONTEXT:** Use these intersections to recommend pragmatic next steps. Risk is exponentially worse when combined with high churn (frequent edits) or high authorship centralization (single points of failure).

### 🔥 The Hotspot Matrix (High Volatility + High Risk)
These files are messy, complex, and modified frequently. They are the primary source of developer friction.

- `src/Illuminate/Collections/Arr.php` -> Churn: **67.61%** | Cog Load: 36.0978% | Debt: 98.0123%
- `src/Illuminate/Collections/LazyCollection.php` -> Churn: **67.61%** | Cog Load: 46.3231% | Debt: 99.583%
- `src/Illuminate/Foundation/Providers/ArtisanServiceProvider.php` -> Churn: **54.12%** | Cog Load: 2.7347% | Debt: 99.9251%
- `src/Illuminate/Collections/Collection.php` -> Churn: **52.24%** | Cog Load: 43.8026% | Debt: 99.8742%

### 👤 Key Person Dependencies (High Impact + Siloed Knowledge)
These are massive, load-bearing files written almost entirely by a single developer. They represent severe 'Bus Factor' risk.

- `src/Illuminate/Routing/Router.php` -> **Roy** (100.0% isolated ownership) | Magnitude: 627.48
- `src/Illuminate/Foundation/Application.php` -> **taylorotwell** (88.0% isolated ownership) | Magnitude: 552.76
- `tests/Database/DatabaseSQLiteSchemaGrammarTest.php` -> **Lucas Michot** (100.0% isolated ownership) | Magnitude: 473.84
- `tests/Foundation/FoundationViteTest.php` -> **Karim Mahmoud Hassan** (100.0% isolated ownership) | Magnitude: 444.52
- `src/Illuminate/Auth/Access/Gate.php` -> **Bartłomiej Gajda** (100.0% isolated ownership) | Magnitude: 429.52

## 12.8 SYSTEMIC NETWORK BOTTLENECKS (N-Dimensional Topology)
> **AI CONTEXT:** These metrics cross-multiply Network Graph Theory against Risk Exposure to identify the exact mechanisms of runtime failure.

### ☣️ Cascading State Flux (Betweenness * State Flux)
These files act as structural bridges between components, but possess highly volatile, mutating state. They cause unpredictable side-effects for all downstream consumers.

- `src/Illuminate/Database/Eloquent/Model.php` -> **Severity: 2.215** (Bridge: 0.0261 * Flux: 84.9977%)
- `src/Illuminate/Foundation/Exceptions/Renderer/Exception.php` -> **Severity: 2.085** (Bridge: 0.0209 * Flux: 100.0%)
- `src/Illuminate/Http/Request.php` -> **Severity: 0.579** (Bridge: 0.0058 * Flux: 99.9789%)
- `src/Illuminate/Database/Eloquent/Builder.php` -> **Severity: 0.571** (Bridge: 0.0067 * Flux: 85.0%)
- `src/Illuminate/Database/Query/Builder.php` -> **Severity: 0.549** (Bridge: 0.0065 * Flux: 85.0%)

### 🃏 House of Cards (Closeness * Error Risk)
These files are deeply embedded (1 or 2 hops from the entire codebase) but possess high error exposure. A runtime exception here will cascade instantly across the application.

- `src/Illuminate/Support/Str.php` -> **Severity: 19.889** (Embedded: 0.2095 * Error Risk: 94.9216%)
- `src/Illuminate/Foundation/Exceptions/Renderer/Exception.php` -> **Severity: 15.894** (Embedded: 0.193 * Error Risk: 82.3597%)
- `src/Illuminate/Macroable/Traits/Macroable.php` -> **Severity: 13.982** (Embedded: 0.216 * Error Risk: 64.727%)
- `src/Illuminate/Conditionable/Traits/Conditionable.php` -> **Severity: 13.653** (Embedded: 0.1724 * Error Risk: 79.202%)
- `src/Illuminate/Database/Eloquent/Model.php` -> **Severity: 13.045** (Embedded: 0.1683 * Error Risk: 77.4955%)

### 🙈 Opaque Critical Nodes (Dependency Blast Radius * Doc Risk)
These are 'Core Architecture Nodes' that the entire ecosystem relies upon, but they lack human intent, documentation, or ownership metadata. Modifying them is flying blind.

- `tests/Integration/Database/DatabaseTestCase.php` -> **Severity: 98.65** (Blast Radius: 1.973 * Doc Risk: 50.0%)
- `tests/Integration/Database/EloquentTransactionWithAfterCommitTests.php` -> **Severity: 38.2** (Blast Radius: 0.382 * Doc Risk: 100.0%)
- `tests/Console/Fixtures/FakeSignalsRegistry.php` -> **Severity: 24.2** (Blast Radius: 0.242 * Doc Risk: 100.0%)
- `tests/Integration/Http/Resources/JsonApi/Fixtures/Profile.php` -> **Severity: 23.2** (Blast Radius: 0.232 * Doc Risk: 100.0%)
- `tests/Integration/Http/Resources/JsonApi/Fixtures/Team.php` -> **Severity: 23.2** (Blast Radius: 0.232 * Doc Risk: 100.0%)

## APPENDIX A. STRUCTURAL SURFACE LEXICON (EQUATIONS & CONTEXT)
> **How the SAST Engine Calculates the Structural Surface Profile (Lower 0 - Higher Surface Presence 100%):**
> Most scores use a Sigmoid curve based on density (Hits / LOC) to prevent massive files from mathematically hiding their flaws. These 13 vectors are activity/content surface meters -- they describe what is present in a file, not the probability of a defect. The temporal-crucible validation record (gitgalaxy#2982, ~3,550 scanned snapshots, two repositories, pre-registered) tested the per-file-standing-risk claim to exhaustion and found it does not hold; see docs/vectors.md for the full record and gitgalaxy#2991 for the rename this drove. `risk_*` names remain the underlying column/key names for schema compatibility -- see the 'formerly' aliases below.
> 
> 1. **Complexity Load** (formerly Cognitive Load Exposure)**:** Measures the mental effort required for a developer to read and understand the file. `Density(Branches + (Flux * 2) + Async/Danger)` mitigated by `Doc Coverage`.
> 2. **Guard Balance** (formerly Error & Exception Risk Exposure)**:** Measures structural integrity and resilience against runtime errors. `Net Exposure = (Danger + Safety_Neg + Flux) - (Safety + Tests + Docs)`.
> 3. **Debt Markers** (formerly Tech Debt Exposure)**:** Measures the density of developer-annotated structural stress. `Density(TODOs [1x] + FIXMEs/Hacks [3x] + Empty Stubs [0.5x])`.
> 4. **Test Surface** (formerly Verification Risk Exposure)**:** Evaluates test coverage by comparing a function's structural complexity against the scope of the tests validating it.
> 5. **Connectivity** (formerly API Risk Exposure)**:** Measures the public surface area of a module. `Ratio(API Hits / Total Functions & Classes)`.
> 6. **Concurrency Surface** (formerly Concurrency Risk Exposure)**:** Measures the density of asynchronous operations, threading, and parallel execution logic.
> 7. **Mutation Surface** (formerly State Flux Risk Exposure)**:** Measures the frequency of data mutation and variable reassignment.
> 8. **Dead Code Surface** (formerly Commented Logic (dead code))**:** Measures the presence of abandoned, commented-out logic blocks.
> 9. **Spec Alignment** (formerly Spec Match Risk Exposure)**:** Measures how closely code aligns with formal specifications or architectural requirements.
> 10. **Historical Stability** (formerly Stability; predictive layer, promotion pending #2987)**:** Measures the recency of edits relative to the repository's entire lifespan. Part of the family the validation record actually supports as predictive -- currently ablated to zero in every scan (`GITGALAXY_DISABLE_GIT_HISTORY`, temporal-crucible#29).
> 11. **Historical Churn** (formerly Deep Churn; predictive layer, promotion pending #2987)**:** Measures the historical volatility and frequency of modification. Same predictive-layer status and ablation caveat as Historical Stability above.
> 12. **Documentation Surface** (formerly Documentation Risk Exposure)**:** Of the units extracted from a file, the weight-share a reader cannot recover from documentation -- public units count double, runtime-dynamic units count more, and a folder-level documentation umbrella shields the whole file. A ratio over units, not a density over lines; files with no extracted units have no value.
> 13. **Indentation Consistency:** Measures formatting alignment (Tabs vs. Spaces). Provided for codebase standardization context, not a functional risk.
> 
> **--- THE SECURITY & VULNERABILITY LENS ---**
> 14. **Obfuscation & Evasion Risk:** Measures the density of obfuscated logic, packed strings, and non-standard encoding.
> 15. **Logic Bomb / Sabotage Risk:** Measures condition-heavy execution leading to destructive OS, memory, or process commands.
> 16. **Injection Surface Risk Exposure:** Measures external network/I/O input flowing directly into dynamic execution contexts (XSS, SQLi, RCE).
> 17. **Memory Corruption Risk Exposure:** Measures the density of raw pointer math and manual memory allocations (Buffer Overflows, UAF).
> 18. **Credential Material** (formerly Secrets Risk Exposure)**:** Measures the presence of hardcoded credentials exposed to logs or globals.
> 
> **--- STRUCTURAL MAGNITUDE (NOT RISK) ---**
> **19. Function Magnitude (Impact Score):** Measures the physical footprint and 'heaviness' of a specific function. `((BranchHits + 1) * (Args + 1) + (0.05 * LOC)) * 10`. This is NOT a risk score.
> **20. File Magnitude (Total Impact):** Measures the total structural impact of a file. `Sum(Function Impacts) + API + Concurrency + Flux + (LOC / 50)`. This is NOT a risk score.

## AI SYSTEM INSTRUCTIONS (OUTPUT FORMAT)
> **CRITICAL TONE DIRECTIVE:** Stay in the Senior Technical Storyteller persona from Section 1. Use grounded, professional software engineering terminology (e.g., coupling, cohesion, technical debt, single responsibility) woven into a cohesive narrative -- not a dry, disconnected bullet-point audit. DO NOT use sci-fi, dramatic, or sensational jargon (e.g., 'Trojan', 'violently violates', 'parasitic', 'chimeric'). Be objective and factual, but write like you're explaining the codebase to a colleague, not filing a verdict.
> **When the user asks for an architectural review, structure your response using these directives:**
> 1. **Information Flow & Purpose (The Executive Summary):** Synthesize the overarching purpose of the codebase. Trace the information flow by analyzing the Top Dependencies ('Imports' and 'Imported By') and the Language Composition. Explain how the system's archetype drives its design, but only mention Z-Score deviations if they are highly abnormal.
> 2. **Notable Structures & Architecture:** Discuss the architecture based on the Dependency Graph. Identify the foundational load-bearers (highest inbound connections) versus the fragile orchestrators (highest outbound imports).
> 3. **Security & Vulnerabilities:** Immediately surface any critical threats flagged in the `AI THREAT INTELLIGENCE (XGBoost)` section. If none exist, briefly confirm the repository is secure from recognized structural threats.
> 4. **Outliers & Extremes:** Focus strictly on statistical anomalies. Highlight files or directory groups with high Structural Magnitude combined with a wide Blast Radius, severe Z-Scores (Architectural Drift), or extreme spikes in individual surface vectors (like Mutation Surface or Complexity Load). Do NOT sum the surface vectors together or treat any total of them as a score -- they are independently scaled meters in different units (#3112). Ignore normal, healthy code.
> 5. **Recommended Next Steps (Refactoring for Stability):** Provide 2-3 highly specific, pragmatic suggestions focused strictly on reducing outliers. Instruct the user on how to refactor high Z-score files, decouple massive central nodes, or mitigate extreme risk exposures to stabilize the system's architecture.
